--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                       <div class="cover-image-wrap">
                         <div class="cover-image">
                             <div class="cover cover-normal">
-                    <img class="cover__img js-lazy image-loaded" src="https://i.imgur.com/8JpB5sU.png">
+                    <img class="cover__img js-lazy image-loaded" src="https://i.imgur.com/ebRbjcI.png">
                                       </div>
                         </div>
                       </div>
@@ -73,10 +73,43 @@
                     </div>
                   </a>
 
+                  <a style="font-family: Roboto; display: inline-block; width: 49%; text-decoration: none; " class="js-editable-target editable project-cover js-project-cover-touch hold-space" href="graphics.html" data-context="pages" data-identity="id:p5d13bb0e4cf1569b903278958a8dcef1dd9982620c23801185582">
 
+                      <div class="cover-image-wrap">
+                        <div class="cover-image">
+                            <div class="cover cover-normal">
+                    <img class="cover__img js-lazy image-loaded" src="https://i.imgur.com/lfv1ZgV.png">
+                                      </div>
+                        </div>
+                      </div>
+                    <div class="details-wrap">
+                      <div class="details">
+                        <div class="details-inner">
+                            <div style="text-decoration: none;" class="title preserve-whitespace">Server Experience</div>
+                            <div class="date" style="text-decoration: none;">2019</div>
+                        </div>
+                      </div>
+                    </div>
+                  </a>
 
+                  <a style="font-family: Roboto; display: inline-block; width: 49%; text-decoration: none; " class="js-editable-target editable project-cover js-project-cover-touch hold-space" href="graphics.html" data-context="pages" data-identity="id:p5d13bb0e4cf1569b903278958a8dcef1dd9982620c23801185582">
 
-
+                      <div class="cover-image-wrap">
+                        <div class="cover-image">
+                            <div class="cover cover-normal">
+                    <img class="cover__img js-lazy image-loaded" src="https://i.imgur.com/ZkeHQwn.png">
+                                      </div>
+                        </div>
+                      </div>
+                    <div class="details-wrap">
+                      <div class="details">
+                        <div class="details-inner">
+                            <div style="text-decoration: none;" class="title preserve-whitespace">Cinematography</div>
+                            <div class="date" style="text-decoration: none;">2019</div>
+                        </div>
+                      </div>
+                    </div>
+                  </a>
 
 
 
