--- a/web.html
+++ b/web.html
@@ -125,7 +125,7 @@
         </div>
         <div class="col">
               
-                <img style="height: 550px; width: 100%; object-fit:cover" src="https://i.imgur.com/XdnooyN.png" alt="">
+                <img style="height: 550px; width: 100%; object-fit:cover" src="https://i.imgur.com/0HopONy.png" alt="">
           
         </div>
       </div>
