--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                       </div>
                     </a>
 
-                    <a style="font-family: Roboto; display: inline-block; width: 49%; text-decoration: none; " class="js-editable-target editable project-cover js-project-cover-touch hold-space" href="graphics.html" data-context="pages" data-identity="id:p5d13bb0e4cf1569b903278958a8dcef1dd9982620c23801185582">
+                    <a style="font-family: Roboto; display: inline-block; width: 49%; text-decoration: none; " class="js-editable-target editable project-cover js-project-cover-touch hold-space" href="web.html" data-context="pages" data-identity="id:p5d13bb0e4cf1569b903278958a8dcef1dd9982620c23801185582">
 
                       <div class="cover-image-wrap">
                         <div class="cover-image">
@@ -73,7 +73,7 @@
                     </div>
                   </a>
 
-                  <a style="font-family: Roboto; display: inline-block; width: 49%; text-decoration: none; " class="js-editable-target editable project-cover js-project-cover-touch hold-space" href="graphics.html" data-context="pages" data-identity="id:p5d13bb0e4cf1569b903278958a8dcef1dd9982620c23801185582">
+                  <a style="font-family: Roboto; display: inline-block; width: 49%; text-decoration: none; " class="js-editable-target editable project-cover js-project-cover-touch hold-space" href="server.html" data-context="pages" data-identity="id:p5d13bb0e4cf1569b903278958a8dcef1dd9982620c23801185582">
 
                       <div class="cover-image-wrap">
                         <div class="cover-image">
@@ -92,7 +92,7 @@
                     </div>
                   </a>
 
-                  <a style="font-family: Roboto; display: inline-block; width: 49%; text-decoration: none; " class="js-editable-target editable project-cover js-project-cover-touch hold-space" href="graphics.html" data-context="pages" data-identity="id:p5d13bb0e4cf1569b903278958a8dcef1dd9982620c23801185582">
+                  <a style="font-family: Roboto; display: inline-block; width: 49%; text-decoration: none; " class="js-editable-target editable project-cover js-project-cover-touch hold-space" href="cinema.html" data-context="pages" data-identity="id:p5d13bb0e4cf1569b903278958a8dcef1dd9982620c23801185582">
 
                       <div class="cover-image-wrap">
                         <div class="cover-image">
