--- a/cinema.html
+++ b/cinema.html
@@ -42,12 +42,18 @@
 <br><br>
 
 
+<div style="width: 80%; padding: 20px;" class="card"> 
+  
+<div style="display: inline-block;">
+<h4>Server - Short Promo</h4>
+<p>This project includes speed ramps, text animations and more. Although this isn't very long, it is feature-packed and creative. Usually, there would be higher quality video (ie. shaders, etc), but the footage was provided by the client.</p>
 
-<h2>(<span style="font-size: 70%" class="badge badge-info"> coming very soon</span>)</h2>
+</h4>
+</div>
 
+  <iframe style="display: inline-block;" width="560" height="315" src="https://www.youtube.com/embed/yzezQ5iU_lA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-
-
+</div>
         </center>
 
       
