--- a/web.html
+++ b/web.html
@@ -51,7 +51,7 @@
           <div style="padding: 40px; height: 550px;" class="card">
         <center> <h1>Dargon Network Server</h1></center>
 <p class="lead">This site was made for the Dargon Network server.</p>
-<button onclick="window.open('http://dargonnetwork.space')" class="waves-float-button">Go to website</button>
+<button onclick="window.open('https://eon12.github.io/dragonmc/')" class="waves-float-button">Go to website</button>
 <Br><br>
 <h4>Noteworthy Features:</h4>
 <ul class="list-group list-group-flush">
