--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <center>
     
     <br><br><br><br>
-       <span onclick="window.location.replace('https://imgur.com/a/NCkLmA7')"><b>Web Development</b></span>
-                          <span onclick="window.location.replace('https://imgur.com/a/ifwZQgp')">Graphics</span>
-                          <span onclick="window.location.replace('https://imgur.com/a/ifwZQgp')">Setups & Configurations</span>
+       <span onclick="window.open('https://imgur.com/a/NCkLmA7')">Web Development</span>
+                          <span onclick="window.open('https://imgur.com/a/ifwZQgp')">Graphics</span>
+                          <span onclick="window.open('https://imgur.com/a/ifwZQgp')">Setups & Configurations</span>
     
     </center>
 
