--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <br><br><br><br>
        <span onclick="window.open('https://imgur.com/a/NCkLmA7')">Web Development</span>
                           <span onclick="window.open('https://imgur.com/a/ifwZQgp')">Graphics</span>
-                          <span onclick="window.open('https://imgur.com/a/ifwZQgp')">Setups & Configurations</span>
+                          <span onclick="window.open('https://imgur.com/a/7uZs6q3')">Setups & Configurations</span>
     
     </center>
 
